--- a/modules-available/locationinfo/frontend/panel.html
+++ b/modules-available/locationinfo/frontend/panel.html
@@ -502,6 +502,6 @@
 	</script>
 </head>
 <body class="main">
-	<h1>Raum Übersicht (more testing needed)</h1>
+	<h1>Raum Übersicht</h1>
 </body>
 </html>
